--- a/config/config.json
+++ b/config/config.json
@@ -1,1 +1,8 @@
-{}
+{
+  "connections": {
+    "local": {
+      "connection_string": "mongodb://localhost:27017",
+      "connection_options": {}
+    }
+  }
+}
